--- a/ec/app/templates/app/base.html
+++ b/ec/app/templates/app/base.html
@@ -62,7 +62,7 @@
                     <ul class="dropdown-menu" id="profileDropdown" >
                         <li><a class="dropdown-item" href="{% url 'profile' %}">Hồ sơ</a></li>
                         <li><a class="dropdown-item" href="#">Đặt hàng</a></li>
-                        <li><a class="dropdown-item" href="#">Đổi mật khẩu</a></li>
+                        <li><a class="dropdown-item" href="{% url 'passwordchange' %}">Đổi mật khẩu</a></li>
                         <li><a class="dropdown-item" href="#">Thoát</a></li>
                     </ul>
                 </li>
