--- a/ec/app/templates/app/login.html
+++ b/ec/app/templates/app/login.html
@@ -8,6 +8,11 @@
         <div class="col-sm-6 offset-sm-3">
             <h3 class="text-center">Login</h3>
             <hr>
+            {% if form.non_field_errors %}
+                {% for error in form.non_field_errors %}
+                    <p class="alert alert-danger my-3">{{error}}</p>
+                {% endfor %}
+            {% endif %}
             <form action="" method="post" novalidate class="shadow p-5">
                 {% csrf_token %}
                 {% for fm in form %}
@@ -25,11 +30,11 @@
                     </small>
                 </div>
 
-                {% if form.non_field_errors %}
+                <!-- {% if form.non_field_errors %}
                     {% for error in form.non_field_errors %}
                         <p class="alert alert-danger my-3">{{error}}</p>
                     {% endfor %}
-                {% endif %}
+                {% endif %} -->
             </form>
         </div>
     </div>
