Thêm quên mật khẩu

--- a/ec/app/templates/app/base.html
+++ b/ec/app/templates/app/base.html
@@ -63,7 +63,7 @@
                         <li><a class="dropdown-item" href="{% url 'profile' %}">Hồ sơ</a></li>
                         <li><a class="dropdown-item" href="#">Đặt hàng</a></li>
                         <li><a class="dropdown-item" href="{% url 'passwordchange' %}">Đổi mật khẩu</a></li>
-                        <li><a class="dropdown-item" href="#">Thoát</a></li>
+                        <li><a class="dropdown-item" href="{% url 'logout' %}">Thoát</a></li>
                     </ul>
                 </li>
                 <li class="nav-item mx-2">
