50% của thanh toán

--- a/ec/app/templates/app/checkout.html
+++ b/ec/app/templates/app/checkout.html
@@ -50,10 +50,11 @@
                     <input type="number" class="form-control" name="totalamount" value={{totalamount}} readonly>
                 </div>
                 <div class="text-end">
-                    <button id="rzp-button1" type="submit" class="btn btn-warning mt-3 px-5 fw-bold">Thanh toán</button>
+                    <!-- <button id="rzp-button1" type="submit" class="btn btn-warning mt-3 px-5 fw-bold">Thanh toán</button> -->
+                    <a href="#" class="btn btn-warning mt-3 px-5 fw-bold">Thanh toán</a>
                 </div>
             </form>
         </div>
     </div>
-</div>
+</div><br><br>
 {% endblock main-content%}
