--- a/ec/app/templates/app/addtocart.html
+++ b/ec/app/templates/app/addtocart.html
@@ -44,7 +44,7 @@
                 <div class="card-body">
                     <h3>Tổng số tiền</h3>
                     <ul class="list-group">
-                        <li class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 pb-0">Số lượng <span id="amount">{{amount}} $</span></li>
+                        <li class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 pb-0">Tiền <span id="amount">{{amount}} $</span></li>
                         <li class="list-group-item d-flex justify-content-between align-items-center px-0">Giao hàng <span>40 $</span></li>
                         <li class="list-group-item d-flex justify-content-between align-items-center border-0 px-0 mb-3">
                             <div>
