--- a/ec/app/templates/app/productdetail.html
+++ b/ec/app/templates/app/productdetail.html
@@ -24,7 +24,7 @@
                 <input type="hidden" name="prod_id" value={{product.id}}>
                 <button type="submit" class="btn btn-primary shadow px-5 py-2">Thêm vào giỏ hàng</button>
             </form>
-            <a href="{% url 'showcart' %}" class="btn btn-warning shadow px-5 py-2 ms-4">Mua ngay</a>
+            <!-- <a href="{% url 'showcart' %}" class="btn btn-warning shadow px-5 py-2 ms-4">Mua ngay</a> -->
 
         </div>
     </div>
