--- a/ec/app/templates/app/checkout.html
+++ b/ec/app/templates/app/checkout.html
@@ -51,6 +51,7 @@
                 </div>
                 <div class="text-end">
                     <!-- <button id="rzp-button1" type="submit" class="btn btn-warning mt-3 px-5 fw-bold">Thanh toán</button> -->
+                    <!-- <a href="{% url 'orders' %}" class="btn btn-warning mt-3 px-5 fw-bold">Thanh toán</a> -->
                     <a href="#" class="btn btn-warning mt-3 px-5 fw-bold">Thanh toán</a>
                 </div>
             </form>
