--- a/ec/app/templates/app/changepassword.html
+++ b/ec/app/templates/app/changepassword.html
@@ -9,7 +9,10 @@
 
         <div class="col-sm-2 border-end">
             <ul class="list-unstyled">
-                <li class="d-grid"><a href="#" class="btn btn-primary">Đổi mật khẩu</a></li>
+                <li class="d-grid"><a href="{% url 'profile' %}" class="btn">Hồ sơ</a></li>
+                <li class="d-grid"><a href="{% url 'address' %}" class="btn">Địa chỉ</a></li>
+                <li class="d-grid"><a href="{% url 'orders' %}" class="btn">Đơn hàng</a></li>
+                <li class="d-grid"><a href="{% url 'passwordchange' %}" class="btn btn-primary">Đổi mật khẩu</a></li>
             </ul>
         </div>
 
