--- a/ec/app/templates/app/productdetail.html
+++ b/ec/app/templates/app/productdetail.html
@@ -25,7 +25,11 @@
                 <button type="submit" class="btn btn-primary shadow px-5 py-2">Thêm vào giỏ hàng</button>
             </form>
             <!-- <a href="{% url 'showcart' %}" class="btn btn-warning shadow px-5 py-2 ms-4">Mua ngay</a> -->
-
+            {% if wishlist %}
+            <a pid={{product.id}} class="minus-wishlist btn btn-danger shadow px-5 py-2 ms-4"><i class="fas fa-heart fa-lg"></i></a>
+            {% else %}
+            <a pid={{product.id}} class="plus-wishlist btn btn-success shadow px-5 py-2 ms-4"><i class="fas fa-heart fa-lg"></i></a>
+            {% endif %}
         </div>
     </div>
 </div>
