--- a/ec/app/templates/app/home.html
+++ b/ec/app/templates/app/home.html
@@ -37,7 +37,7 @@
 {% endblock banner-slider%}
 
 
-{% block information %}
+<!-- {% block information %}
 <div class="container">
     <div class="row bg-success text-center p-5 border-bottom shadow">
         <h1>Products</h1>
@@ -47,7 +47,7 @@
     </div>    
 </div>
 
-{% endblock information %}
+{% endblock information %} -->
 
 {% block main-content %}
 <div class="container">
