--- a/ec/app/templates/app/base.html
+++ b/ec/app/templates/app/base.html
@@ -90,7 +90,7 @@
     
 
     {% block banner-slider %}{% endblock banner-slider %}
-    {% block information %}{% endblock information %}
+    <!-- {% block information %}{% endblock information %} -->
     {% block main-content %}{% endblock main-content %}
 
     <footer class="container-fluid fixed-bottom bg-dark text-center text-white p-2 mt-5">
